--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/commons-math3-3.3-src.zip')
     compile 'com.android.support:support-v13:20.0.0'
+    compile files('libs/commons-codec-1.3.jar')
+    compile files('libs/commons-logging-1.1.1.jar')
+    compile files('libs/httpclient-4.0.1.jar')
+    compile files('libs/httpcore-4.0.1.jar')
+    compile files('libs/WolframAlpha-1.1.jar')
 }
